magic logo bottom remove for mobile

--- a/index.html
+++ b/index.html
@@ -652,9 +652,9 @@
             
             
           </div><!-- Col end -->
-          <div class="col-lg-4 col-md-4 footer-widget footer-about">
+          <!-- <div class="col-lg-4 col-md-4 footer-widget footer-about">
             <img loading="lazy" class="footer-logo" src="images/theme-logo-dark.png" alt="Rotaract">
-          </div>
+          </div> -->
 
           <div class="col-lg-4 col-md-4 footer-widget mt-5 mt-md-0">
             <h3 class="widget-title">Follow us on</h3>
