--- a/project2.html
+++ b/project2.html
@@ -45,8 +45,7 @@
                 
                 <div class="logo" style="display: inline-block;">
                     <a class="d-block" href="index.html">
-                      <img loading="lazy" src="images/logo.png" alt="Rotaract">
-                      <img loading="lazy" src="images/theme-logo.png" alt="Rotaract" style="margin-left: 30px;">
+                      <img loading="lazy" src="images/logo.png" alt="Rotary Club of Bonny Island">
                     </a>
                 </div><!-- logo end -->
                 <div class="extra-bts">
