--- a/index.html
+++ b/index.html
@@ -439,14 +439,14 @@
               <div class="item">
                 <div class="quote-item">
                     <span class="quote-text">
-                      Quote 1.
+                      Friendliness knows no bounds; it surmounts all barriers; it navigates all seas.
                     </span>
 
                     <div class="quote-item-footer">
                       <!-- <img loading="lazy" class="testimonial-thumb" src="images/clients/testimonial2.png" alt="testimonial"> -->
                       <div class="quote-item-info">
-                          <h3 class="quote-author">Rtn. A B</h3>
-                          <span class="quote-subtext">President</span>
+                          <h3 class="quote-author">Paul Harris</h3>
+                          <span class="quote-subtext">1935</span>
                       </div>
                     </div>
                 </div><!-- Quote item end -->
@@ -455,14 +455,14 @@
               <div class="item">
                 <div class="quote-item">
                     <span class="quote-text">
-                      Quote 1.
+                      As a harbinger of business ethics, Rotary sends its message around the world that true service means personal responsibility for peace and goodwill towards men.
                     </span>
 
                     <div class="quote-item-footer">
                       <!-- <img loading="lazy" class="testimonial-thumb" src="images/clients/testimonial2.png" alt="testimonial"> -->
                       <div class="quote-item-info">
-                          <h3 class="quote-author">Rtn. A B</h3>
-                          <span class="quote-subtext">President</span>
+                          <h3 class="quote-author">Raymond Havens</h3>
+                          <span class="quote-subtext">1922</span>
                       </div>
                     </div>
                 </div><!-- Quote item end -->
@@ -471,14 +471,14 @@
               <div class="item">
                 <div class="quote-item">
                     <span class="quote-text">
-                      Quote 1.
+                      Our success or failure will not depend upon the machinery of Rotary or its physical growth, but upon the extent to which Rotary's ideals or objectives are translated into positive, tangible results in personal, business, community, and international life. We shall be known by our works.
                     </span>
 
                     <div class="quote-item-footer">
                       <!-- <img loading="lazy" class="testimonial-thumb" src="images/clients/testimonial2.png" alt="testimonial"> -->
                       <div class="quote-item-info">
-                          <h3 class="quote-author">Rtn. A B</h3>
-                          <span class="quote-subtext">President</span>
+                          <h3 class="quote-author">Almon E. Roth</h3>
+                          <span class="quote-subtext">1930</span>
                       </div>
                     </div>
                 </div><!-- Quote item end -->
@@ -487,14 +487,14 @@
               <div class="item">
                 <div class="quote-item">
                     <span class="quote-text">
-                      Quote 1.
+                      Rotary summons men to respond to their best impulses;their best selves; [to] lift up their heads in every land. The best things in us are not confined by national boundaries.
                     </span>
 
                     <div class="quote-item-footer">
                       <!-- <img loading="lazy" class="testimonial-thumb" src="images/clients/testimonial2.png" alt="testimonial"> -->
                       <div class="quote-item-info">
-                          <h3 class="quote-author">Rtn. A B</h3>
-                          <span class="quote-subtext">President</span>
+                          <h3 class="quote-author">Allen D. Albert</h3>
+                          <span class="quote-subtext">1934</span>
                       </div>
                     </div>
                 </div><!-- Quote item end -->
