--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@
 
           <div class="col-lg-4 col-md-6 shuffle-item" >
             <div class="project-img-container">
-              <a class="gallery-popup" href="images/projects/project1.jpg" aria-label="project-img">
-                <img class="img-fluid" src="images/featured-projects/project1.jpg" alt="project-img">
+              <a class="gallery-popup" href="images/projects/frscroad.png" aria-label="project-img">
+                <img class="img-fluid" src="images/featured-projects/frscroad.png" alt="project-img">
                 <span class="gallery-icon"><i class="fa fa-plus"></i></span>
               </a>
               <div class="project-item-info">
@@ -323,7 +323,7 @@
                   <h3 class = "project-item-title">
                     <!-- <a href="project.html">Friexiety: Mental Health Awarness</a> -->
                   </h3>
-                  <p class="project-cat">Community Service</p>
+                  <p class="project-cat">Care for Road Accident Victim</p>
                 </div>
               </div>
             </div>
@@ -331,8 +331,8 @@
 
           <div class="col-lg-4 col-md-6 shuffle-item">
             <div class="project-img-container">
-              <a class="gallery-popup" href="images/projects/project2.jpg" aria-label="project-img">
-                <img class="img-fluid" src="images/featured-projects/project2.jpg" alt="project-img">
+              <a class="gallery-popup" href="images/projects/drug.jpg" aria-label="project-img">
+                <img class="img-fluid" src="images/featured-projects/drug.jpg" alt="project-img">
                 <span class="gallery-icon"><i class="fa fa-plus"></i></span>
               </a>
               <div class="project-item-info">
@@ -340,7 +340,7 @@
                   <h3 class="project-item-title">
                     <!-- <a href="project.html">Funtract</a> -->
                   </h3>
-                  <p class="project-cat">Club Service</p>
+                  <p class="project-cat">Drug Abuse Sensitization</p>
                 </div>
               </div>
             </div>
@@ -348,8 +348,8 @@
 
           <div class="col-lg-4 col-md-6 shuffle-item" >
             <div class="project-img-container">
-              <a class="gallery-popup" href="images/projects/project1.jpg" aria-label="project-img">
-                <img class="img-fluid" src="images/featured-projects/project1.jpg" alt="project-img">
+              <a class="gallery-popup" href="images/projects/polio.jpg" aria-label="project-img">
+                <img class="img-fluid" src="images/featured-projects/polio.jpg" alt="project-img">
                 <span class="gallery-icon"><i class="fa fa-plus"></i></span>
               </a>
               <div class="project-item-info">
@@ -357,7 +357,7 @@
                   <h3 class="project-item-title">
                     <!-- <a href="project.html">Plastic Free Planet</a> -->
                   </h3>
-                  <p class="project-cat">Community Service</p>
+                  <p class="project-cat">End Polio/Mental Health Awareness</p>
                 </div>
               </div>
             </div>
@@ -365,8 +365,8 @@
 
           <div class="col-lg-4 col-md-6 shuffle-item" >
             <div class="project-img-container">
-              <a class="gallery-popup" href="images/projects/project2.jpg" aria-label="project-img">
-                <img class="img-fluid" src="images/featured-projects/project2.jpg" alt="project-img">
+              <a class="gallery-popup" href="images/projects/krc.jpg" aria-label="project-img">
+                <img class="img-fluid" src="images/featured-projects/krc.jpg" alt="project-img">
                 <span class="gallery-icon"><i class="fa fa-plus"></i></span>
               </a>
               <div class="project-item-info">
@@ -374,7 +374,7 @@
                   <h3 class="project-item-title">
                     <!-- <a href="project.html">Drop of Hope</a> -->
                   </h3>
-                  <p class="project-cat">Community Service</p>
+                  <p class="project-cat">Books to Kids Resource Centre</p>
                 </div>
               </div>
             </div>
@@ -382,8 +382,8 @@
 
           <div class="col-lg-4 col-md-6 shuffle-item" >
             <div class="project-img-container">
-              <a class="gallery-popup" href="images/projects/project1.jpg" aria-label="project-img">
-                <img class="img-fluid" src="images/featured-projects/project1.jpg" alt="project-img">
+              <a class="gallery-popup" href="images/projects/beach.jpg" aria-label="project-img">
+                <img class="img-fluid" src="images/featured-projects/beach.jpg" alt="project-img">
                 <span class="gallery-icon"><i class="fa fa-plus"></i></span>
               </a>
               <div class="project-item-info">
@@ -391,7 +391,7 @@
                   <h3 class="project-item-title">
                     <!-- <a href="project.html">Food Donation Drive</a> -->
                   </h3>
-                  <p class="project-cat">Community Service</p>
+                  <p class="project-cat">Beach Cleaning Project</p>
                 </div>
               </div>
             </div>
@@ -399,8 +399,8 @@
 
           <div class="col-lg-4 col-md-6 shuffle-item" >
             <div class="project-img-container">
-              <a class="gallery-popup" href="images/projects/project2.jpg" aria-label="project-img">
-                <img class="img-fluid" src="images/featured-projects/project2.jpg" alt="project-img">
+              <a class="gallery-popup" href="images/projects/christmas.png" aria-label="project-img">
+                <img class="img-fluid" src="images/featured-projects/christmas.png" alt="project-img">
                 <span class="gallery-icon"><i class="fa fa-plus"></i></span>
               </a>
               <div class="project-item-info">
@@ -408,7 +408,7 @@
                   <h3 class="project-item-title">
                     <!-- <a href="project.html">Frizzling Fours</a> -->
                   </h3>
-                  <p class="project-cat">Sports, Club Service</p>
+                  <p class="project-cat">Sharing and Caring</p>
                 </div>
               </div>
             </div>
