--- a/project2.html
+++ b/project2.html
@@ -118,6 +118,14 @@
 <script src="plugins/colorbox/jquery.colorbox.js"></script>
 <!-- Template custom -->
 <script src="js/script.js"></script>
-
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+      var path = window.location.pathname;
+      if (path.endsWith('.html')) {
+          var newPath = path.slice(0, -5);
+          window.history.replaceState({}, '', newPath);
+      }
+  });
+</script>
 </body>
 </html>
