--- a/404.html
+++ b/404.html
@@ -1,30 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Not Found</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 50px;
-        }
-        h1 {
-            font-size: 50px;
-        }
-        p {
-            font-size: 20px;
-        }
-        a {
-            text-decoration: none;
-            color: #007BFF;
-        }
-    </style>
+  <meta charset="utf-8">
+  <title>Rotary Club of Bonny Island</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="The Dynamic Club - 91214">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
+  <link rel="icon" type="image/png" href="images/favicon.png">
+  <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="plugins/fontawesome/css/all.min.css">
+  <link rel="stylesheet" href="plugins/animate-css/animate.css">
+  <link rel="stylesheet" href="plugins/slick/slick.css">
+  <link rel="stylesheet" href="plugins/slick/slick-theme.css">
+  <link rel="stylesheet" href="plugins/colorbox/colorbox.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>404</h1>
-    <p>Page Not Found</p>
-    <p><a href="https://bonnyislandrotaryclub.ng">Go to Home Page</a></p>
+<header id="header" class="header-two">
+  <div class="site-navigation">
+    <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+              <nav class="navbar navbar-expand-lg navbar-light p-0">
+                <div class="logo" style="display: inline-block;">
+                    <a class="d-block" href="index.html">
+                      <img loading="lazy" src="images/logo.png" alt="Rotary Club of Bonny Island">
+                    </a>
+                </div>
+                <div class="extra-bts">
+                  <ul id="donate-join">
+                    <li id="donate" class="header-get-a-quote">
+                        <a class="btn btn-primary" href="donate.html">Donate</a>
+                    </li>
+                    <li class="header-get-a-quote">
+                      <a class="btn btn-primary" href="joinus.html">Join Us</a>
+                    </li>
+                  </ul>
+                </div>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div id="navbar-collapse" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav ml-auto align-items-center">
+                      <li class="nav-item dropdown active">
+                          <a href="index.html">Home</a>
+                      </li>
+                      <li class="nav-item dropdown">
+                          <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Club <i class="fa fa-angle-down"></i></a>
+                          <ul class="dropdown-menu" role="menu">
+                            <li><a href="about.html">About Us</a></li>
+                            <li><a href="testimonials.html">Testimonials</a></li>
+                            <li><a href="newmem.html">All Members</a></li>
+                            <li><a href="faq.html">FAQ</a></li>
+                          </ul>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a href="" class="nav-link dropdown-toggle" data-toggle="dropdown">Projects<i class="fa fa-angle-down"></i></a>
+                        <ul class="dropdown-menu" role="menu">
+                          <li><a href="project.html">All Projects</a></li>
+                          <li><a href="calendar.html">Events Calendar</a></li>
+                        </ul>
+                    </li>
+                      <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                </div>
+              </nav>
+            </div>
+        </div>
+    </div>
+  </div>
+</header>
+<main style="display: flex; justify-content: center; align-items: center; height: 80vh; text-align: center;">
+    <div>
+        <h1>Construction Ongoing</h1>
+        <p>We are currently working on this page. Please check back later.</p>
+        <a href="index.html" style="display: inline-block; margin-top: 20px; padding: 10px 20px; background-color: #333; color: #fff; text-decoration: none; border-radius: 5px;">Go Home</a>
+    </div>
+</main>
+<script src="plugins/jQuery/jquery.min.js"></script>
+<script src="plugins/bootstrap/bootstrap.min.js" defer></script>
+<script src="plugins/slick/slick.min.js"></script>
+<script src="plugins/colorbox/jquery.colorbox.js"></script>
+<script src="js/script.js"></script>
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+      var path = window.location.pathname;
+      if (path.endsWith('.html')) {
+          var newPath = path.slice(0, -5);
+          window.history.replaceState({}, '', newPath);
+      }
+  });
+</script>
 </body>
 </html>
