--- a/404.html
+++ b/404.html
@@ -71,8 +71,8 @@
 </header>
 <main style="display: flex; justify-content: center; align-items: center; height: 80vh; text-align: center;">
     <div>
-        <h1>Construction Ongoing</h1>
-        <p>We are currently working on this page. Please check back later.</p>
+        <h1>PAGE NOT FOUND</h1>
+        <p>Let's help you find your way back home.</p>
         <a href="index.html" style="display: inline-block; margin-top: 20px; padding: 10px 20px; background-color: #333; color: #fff; text-decoration: none; border-radius: 5px;">Go Home</a>
     </div>
 </main>
@@ -84,11 +84,19 @@
 <script>
   document.addEventListener('DOMContentLoaded', function() {
       var path = window.location.pathname;
-      if (path.endsWith('.html')) {
-          var newPath = path.slice(0, -5);
+      
+      // Check if the path ends with 'index.html'
+      if (path.endsWith('index.html')) {
+          var newPath = path.slice(0, -'index.html'.length);
+          window.history.replaceState({}, '', newPath);
+      }
+      // Check if the path ends with any '.html' but not 'index.html'
+      else if (path.endsWith('.html')) {
+          var newPath = path.slice(0, -'.html'.length);
           window.history.replaceState({}, '', newPath);
       }
   });
 </script>
+
 </body>
 </html>
