--- a/404.html
+++ b/404.html
@@ -90,6 +90,11 @@
           var newPath = path.slice(0, -'index.html'.length);
           window.history.replaceState({}, '', newPath);
       }
+            // Check if the path ends with any 'index' but not 'index.html'
+            else if (path.endsWith('index')) {
+          var newPath = path.slice(0, -'index'.length);
+          window.history.replaceState({}, '', newPath);
+      }
       // Check if the path ends with any '.html' but not 'index.html'
       else if (path.endsWith('.html')) {
           var newPath = path.slice(0, -'.html'.length);
