--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <nav class="navbar navbar-expand-lg navbar-light p-0">
                 
                 <div class="logo" style="display: inline-block;">
-                    <a class="d-block" href=" index.html">
+                    <a class="d-block" href="/">
                       <img loading="lazy" src="images/logo.png" alt="Rotary Club of Bonny Island">
                     </a>
                    
@@ -69,7 +69,7 @@
                 <div id="navbar-collapse" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav ml-auto align-items-center">
                       <li class="nav-item dropdown active">
-                          <a href="index.html">Home</a>
+                          <a href="/">Home</a>
                       </li>
 
                       <li class="nav-item dropdown">
