--- a/project4.html
+++ b/project4.html
@@ -44,7 +44,7 @@
               <nav class="navbar navbar-expand-lg navbar-light p-0">
                 
                 <div class="logo" style="display: inline-block;">
-                    <a class="d-block" href="index.html">
+                    <a class="d-block" href="/">
                       <img loading="lazy" src="images/logo.png" alt="Rotary Club of Bonny Island">
                     </a>
                 </div><!-- logo end -->
@@ -65,7 +65,7 @@
                 <div id="navbar-collapse" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav ml-auto align-items-center">
                       <li class="nav-item dropdown active">
-                          <a href="index.html">Home</a>
+                          <a href="/">Home</a>
                       </li>
 
                       <li class="nav-item dropdown">
@@ -100,7 +100,7 @@
     <div>
         <h1>Construction Ongoing</h1>
         <p>We are currently working on this page. Please check back later.</p>
-        <a href="index.html" style="display: inline-block; margin-top: 20px; padding: 10px 20px; background-color: #333; color: #fff; text-decoration: none; border-radius: 5px;">Go Home</a>
+        <a href="/" style="display: inline-block; margin-top: 20px; padding: 10px 20px; background-color: #333; color: #fff; text-decoration: none; border-radius: 5px;">Go Home</a>
     </div>
 </main>
 
