--- a/donate.html
+++ b/donate.html
@@ -152,11 +152,11 @@
                 <div class="banner-heading">
                   <h1 class="banner-title">Donate</h1>
                   <nav aria-label="breadcrumb">
-                      <ol class="breadcrumb justify-content-center">
-                        <li class="breadcrumb-item"><a href="#">Home</a></li>
+                      <!-- <ol class="breadcrumb justify-content-center">
+                        <li class="breadcrumb-item"><a href="/">Home</a></li>
                         <li class="breadcrumb-item"><a href="#">Donate</a></li>
 
-                      </ol>
+                      </ol> -->
                   </nav> 
                 </div>
                 
